--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="display"></div>
+
+    <button class="add-btn">ADD</button>
+
     <script src="/index.js"></script>
   </body>
 </html>
